added a ton of programmable networking cites"

--- a/thesis.bib
+++ b/thesis.bib
@@ -1852,3 +1852,55 @@ url = {https://www.usenix.org/conference/nsdi18/presentation/firestone},
 publisher = {USENIX Association},
 month = apr
 }
+
+@inproceedings {floem,
+author = {Phitchaya Mangpo Phothilimthana and Ming Liu and Antoine Kaufmann and Simon Peter and Rastislav Bodik and Thomas Anderson},
+title = {Floem: A Programming System for {NIC-Accelerated} Network Applications},
+booktitle = {13th USENIX Symposium on Operating Systems Design and Implementation (OSDI 18)},
+year = {2018},
+isbn = {978-1-939133-08-3},
+address = {Carlsbad, CA},
+pages = {663--679},
+url = {https://www.usenix.org/conference/osdi18/presentation/phothilimthana},
+publisher = {USENIX Association},
+month = oct
+}
+
+@inproceedings {e3,
+author = {Ming Liu and Simon Peter and Arvind Krishnamurthy and Phitchaya Mangpo Phothilimthana},
+title = {E3: {Energy-Efficient} Microservices on {SmartNIC-Accelerated} Servers},
+booktitle = {2019 USENIX Annual Technical Conference (USENIX ATC 19)},
+year = {2019},
+isbn = {978-1-939133-03-8},
+address = {Renton, WA},
+pages = {363--378},
+url = {https://www.usenix.org/conference/atc19/presentation/liu-ming},
+publisher = {USENIX Association},
+month = jul
+}
+@inproceedings {ipipe,
+author = {Ming Liu and Simon Peter and Arvind Krishnamurthy and Phitchaya Mangpo Phothilimthana},
+title = {E3: {Energy-Efficient} Microservices on {SmartNIC-Accelerated} Servers},
+booktitle = {2019 USENIX Annual Technical Conference (USENIX ATC 19)},
+year = {2019},
+isbn = {978-1-939133-03-8},
+address = {Renton, WA},
+pages = {363--378},
+url = {https://www.usenix.org/conference/atc19/presentation/liu-ming},
+publisher = {USENIX Association},
+month = jul
+}
+
+@inproceedings{catapult,
+author = {Putnam, Andrew and Caulfield, Adrian and Chung, Eric and Chiou, Derek and Constantinides, Kypros and Demme, John and Esmaeilzadeh, Hadi and Fowers, Jeremy and Gray, Jan and Haselman, Michael and Hauck, Scott and Heil, Stephen and Hormati, Amir and Kim, Joo-Young and Lanka, Sitaram and Peterson, Eric and Smith, Aaron and Thong, Jason and Xiao, Phillip Yi and Burger, Doug and Larus, Jim and Gopal, Gopi Prashanth and Pope, Simon},
+title = {A Reconfigurable Fabric for Accelerating Large-Scale Datacenter Services},
+booktitle = {Proceeding of the 41st Annual International Symposium on Computer Architecuture (ISCA)},
+year = {2014},
+month = {June},
+abstract = {Datacenter workloads demand high computational capabilities, flexibility, power efficiency, and low cost. It is challenging to improve all of these factors simultaneously. To advance datacenter capabilities beyond what commodity server designs can provide, we have designed and built a composable, reconfigurable fabric to accelerate portions of large-scale software services. Each instantiation of the fabric consists of a 6x8 2-D torus of high-end Stratix V FPGAs embedded into a half-rack of 48 machines. One FPGA is placed into each server, accessible through PCIe, and wired directly to other FPGAs with pairs of 10 Gb SAS cables. In this paper, we describe a medium-scale deployment of this fabric on a bed of 1,632 servers, and measure its efficacy in accelerating the Bing web search engine. We describe the requirements and architecture of the system, detail the critical engineering challenges and solutions needed to make the system robust in the presence of failures, and measure the performance, power, and resilience of the system when ranking candidate documents. Under high load, the large-scale reconfigurable fabric improves the ranking throughput of each server by a factor of 95% for a fixed latency distribution—or, while maintaining equivalent throughput, reduces the tail latency by 29%.},
+publisher = {IEEE Press},
+url = {https://www.microsoft.com/en-us/research/publication/a-reconfigurable-fabric-for-accelerating-large-scale-datacenter-services/},
+pages = {13-24},
+isbn = {978-1-4799-4394-4},
+note = {Selected as an IEEE Micro TopPick},
+}
