--- a/thesis.tex
+++ b/thesis.tex
@@ -606,6 +606,498 @@ a switch, while Clio~\cite{clio} and SuperNIC~\cite{supernic} use an FPGA based 
 implement any number of memory side network functions.
 
 
+\section{Swordbox Background}
+
+We briefly overview RDMA, use of
+programmable switches in disaggregated settings, and passive remote
+memory.
+
+\subsection{RDMA protocol}
+
+RDMA was designed as a protocol for accessing remote memory. It
+defines a set of zero-copy instructions---known as
+\textit{verbs}---that are invoked by clients to read or write memory
+physically located on remote servers, typically without kernel
+involvement on either end.  When run over Ethernet using the RoCEv2
+standard, RDMA NICs located on client and server can cooperate to
+implement congestion~\cite{hpcc,dcqcn} and flow control, reliable
+delivery, and at-most-once delivery semantics.  Before exchanging
+data, RDMA end points establish a queue pair (QP) which defines the
+region(s) of memory each is able to access.  Like Internet transport
+protocols, RDMA queue pairs provide a configurable set of semantics
+depending on the transport mode selected: UDP-like semantics are
+provided by unreliable datagram (UD) and unreliable connections (UC),
+while reliable connections (RC) are similar to TCP, ensuring reliable,
+in-order delivery.  Moreover, reliable connections support so-called
+\emph{1-sided} verbs (e.g., read, write, and compare-and-swap) that
+are executed autonomously by the remote NIC without any remote CPU
+involvement.
+
+The benefits of the various transport modes and
+1-vs-2-sided verbs has been a topic of intense debate.  While reliable
+connections provide enhanced guarantees, their implementation requires
+on-NIC memory, a precious resource, and researchers have observed
+scalability bottlenecks due to memory and cache limitations in the
+Mellanox ConnectX family of RDMA
+NICs~\cite{farm,fasst,erpc,lite,design-guidelines}.  Recent work has
+shown how to overcome limits in terms of the number of
+connections~\cite{storm,flock}, but the ordering guarantees provided
+by RC remain restricted to individual queue pairs.  While unreliable
+transport modes can deliver superior performance and
+scalability~\cite{fasst}, they require the use of 2-sided
+verbs---i.e., involvement of a CPU at the memory server---to ensure
+ordering, a non-starter for passive disaggregated settings.  Unless
+hardware support for more sophisticated 1-sided verbs~\cite{filemr,rma,star}
+becomes available, another approach is required.
+
+
+%% While
+%% host memory can provide better scalability modern NICs have bigger
+%% caches with better cache management~\cite{storm}. In the disaggregated
+%% setting no memory side CPU exists to manage the state making RC the
+%% only option for one sided operations.
+
+%% \todo{connection multiplexing ~\cite{flock}}
+
+%% RDMA
+
+% Remote direct memory access (RDMA) is a network protocol
+% which allows NICs to bypass CPUs and access host memory
+% directly.  The RDMA protocol consists of a set of verbs
+% which abstract remote memory instructions. Instruction
+% execution and connection state are entirely managed by the
+% NIC which exposes the verbs API to the CPU. The CPU
+% registers memory regions for DMA with the NIC and sets up
+% connections (Queue Pairs) with a remote RDMA enabled NIC.
+% %%
+% RDMA connections come in a variety of flavors, each of which
+% enables a different set of RDMA verbs and delivary
+% guarantee~\cite{herd, erpc, storm}. Unreliable Datagram
+% (UD), and Unreliable Connection (UC) operate similar to UDP
+% with no reliable delivery or ordering guarantees and a
+% restricted set of verbs.  Reliable Connected (RC) operates
+% similar to TCP, the NIC manages connection states for each
+% QP and ensures reliable in-order delivery by using sequence
+% numbers and a go-back-n retransmission protocol.
+% %%
+% Serious debate exists over which connections to
+% use~\cite{storm,cell,herd,faast,farm}, each has advantages
+% and disadvantages in terms of NIC resource utilization,
+% throughput, and latency. Disaggregated architectures have no
+% remote CPU's, in this proposed setting RC is the most
+% attractive as it alone enables the use of one-sided verbs
+% :\textit{Read}, \textit{Write}, and the atomic \textit{CAS}
+
+
+%% RDMA Connections
+%% RDMA Atomics
+
+
+
+\subsection{Programmable switches}
+
+
+
+Most prior proposals for
+disaggregation consider rack-scale deployments where
+%. They propose a single rack
+%with
+servers are partitioned into roles: compute, memory, and storage, all
+of which are interconnected by a top-of-rack
+switch~\cite{disandapp,the-machine,intel-rack,firebox,legoos}.  The central
+role of the ToR in this architecture has not gone unnoticed, and
+researchers have observed that a programmable switch can off-load a
+wide variety of traditional operating system
+services~\cite{disandapp,mind,netlock,netkv,netchain,netcache}. The
+constraints in each case are similar: programmable switches have
+limited memory and processing capabilities.  If the computational task
+is too large packets must be recirculated adding
+additional latency and reducing aggregate bandwidth.  Ideal
+applications for programmable switches use little memory, require
+minimal processing and deliver outsized performance benefit.
+%from centralization.
+%, and the billions of operations (in terms of packets)
+%that a switch can process per second.
+%%
+
+Specifically, prior work has shown that programmable switches are able
+to provide rack-scale serialization at low
+cost~\cite{eris,no,when-computer,Grant2021InContRes}, manage
+locks~\cite{netlock}, and track the state required to maintain an
+RDMA reliable connection~\cite{tea}.  Most relatedly, researchers have
+even used a programmable switch to implement a centralized memory
+controller including a unified TLB and cache for passive remote
+memory~\cite{mind}.  Their approach is limited, however, by the
+resource constraints of the switch.  Inspired by performance-enhancing
+TCP proxies of old~\cite{snoop,rfc3135}, we consider a slightly
+different design point where the authoritative state and control logic
+remain at the end points.  In our approach, the ToR simply observes
+and, at times, selectively modifies RDMA
+packets~\cite{switchml,Grant2021InContRes} in-flight to improve
+performance while preserving the semantics of the underlying RDMA
+connections.
+
+%% Others have proposed
+%% leveraging this observation, along with programmable switches' ability
+%% to manage small amounts of state in network, to provide a number of
+%% in-network services~\cite{when-computer}; Mind, for instance, provides
+%% a unified TLB and cache for disaggregated applications~\cite{mind}.
+
+%% , and . These properties make a top-of-rack
+%% programmable switch ideal for managing remote memory as it can guard
+%% access, maintain connections, and provide serialization primitives for
+%% all clients.
+
+%\todo{RDMA middlebox (find citations ~\cite{mind,switchml})}
+
+\subsection{Disaggregated memory}
+
+While 1-sided RDMA allows system designers to place memory on passive
+remote servers, the question of how best to access remote memory
+remains open; existing systems fall into one of two categories.
+Transparent systems present far memory to the application as if it
+were local, using traditional memory virtualization techniques to
+cache pages locally and swap in and out on
+demand~\cite{ivy,infiniswap, leap, fastswap,legoos}.
+%In either case transparency incurs a
+%performance cost as remote accesses cannot be optimized for by the
+%running application.
+%%
+Other systems require applications to access remote memory explicitly
+through RPC-like APIs~\cite{aifm,reigons,clover,sherman,fasst,fusee} which
+allow the runtimes to apply a variety of optimizations including
+batching and scheduling.
+%%
+Regardless of the method of access, sharing remote memory between
+clients is fundamentally expensive, and at the time of writing no
+RDMA-based transparent system exposes shared memory.  Rather, the few
+systems that attempt to support sharing do so in the context of
+specific datastructures which allows the runtimes to manage concurrent
+accesses.  We apply \sword\ to two distinct
+contention management schemes---locks and optimistic concurrency
+control---and provide brief overviews below.
+
+\emph{Locks.}  Sherman is a write-optimized B+Tree for passive remote
+memory implemented using per-node locks~\cite{sherman}. The tree is
+augmented using entirely 1-sided RDMA operations. Sherman improves
+performance under contention in two ways. First, it places locks for
+each node in the B+Tree in a special region of NIC memory exposed by
+ConnectX-5 NICs.  This small chunk of memory exposes the same RDMA
+interface as host memory, but allows locking operations to execute
+with approximately 3$\times$ the throughput.  Second, Sherman's
+clients employ a hierarchical locking scheme to reduce the contention
+for server-hosted locks.  This client-local optimization significantly
+improves performance in cases where clients are collocated;
+\sword\ seeks to achieve similar efficiencies at the rack scale.
+
+
+
+%where locks are acquired locally prior
+%to issuing a CAS to remote NIC mapped locks. Locks and unlocks each
+%require a CAS operation.
+
+%The biggest
+%boost in Sherman's performance comes from resolving lock conflicts
+%locally. It assumes that most clients are collocated.
+
+
+%%
+%\sg{(danger zone)} We consider client side optimizations to be highly
+%effective, but also highly restrictive as they assume both collocation and a
+%shared address space for their clients. We focus our attention instead on the
+%fundamental limitations of Sherman's lock based approach.
+
+
+%To demonstrate the effectiveness of {\sword} in practice, we
+%needed to select a passive far memory system with which to experiment.
+%The authors of Clover, a recently published key-value store designed
+%for disaggregated persistent memory~\cite{clover}, made their
+%implementation publicly available and helped us deploy it on our
+%testbed. While Clover targets persistent storage it is also a
+%prototypical example of a key-value store for remote DRAM.  Most
+%importantly for our purposes, its design makes the assumption that
+%there are no remote CPU's co-resident with memory. All of
+
+\emph{Optimistic concurrency.}  Two recent systems support concurrent
+updates to remote key-value stores through optimistic use of
+%remote memory accesses are made via
+1-sided RDMA atomic operations and client-driven resolution protocols. 
+%: reads, writes, and CAS.
+In Clover, reads and writes for a given key are made to an append-only
+linked list stored in (persistent) remote memory~\cite{clover};
+clients race to update the tail of the list.  In FUSEE, persistence is
+implemented through client-driven replication, so clients race to
+update a majority of replicas in an instance of distributed
+consensus~\cite{fusee}.  In both cases, writes are guarded by CAS
+operations so clients can independently determine the outcome of the
+race.  Because we are interested in the fundamental costs of
+  contention---as opposed the additional challenge of replication---we focus specifically on Clover in this paper, but \sword\ could equally well apply to a (degenerate) non-replicated instantiation of FUSEE.  Indeed, we provide a performance comparision in the evaluation (Section~\ref{s:results}).
+
+In Clover, all RDMA requests
+are targetted at the (presumed) tail of the list and writes are
+guarded by CAS operations. A client may not know the location of the
+tail as other writers concurrently push it forward. When an operation
+fails to land at the tail of the list Clover traverses the
+structure until the tail is found. While this provides no liveness
+guarantees, in the common read-heavy case concurrent clients
+eventually reach the end of the list. To speed up operations clients
+keep caches of the end of each key's linked list to
+avoid traversals.
+%% When writes are heavy and/or when
+%% particular keys are hot, Clover's performance degrades substantially.
+By implementing a shared cache at the ToR, \sword\ 
+decreases the likelihood of stale accesses.
+%to stale tail locations.
+%Clover serializes writes with RDMA compare and swap
+%requests which further impact performance.
+
+
+
+\section{Cuckoo Background}
+\label{sec:background}
+
+
+%\subsection{RDMA Key-Value Stores}
+
+%% %Describe existing key value stores relation to RDMA and
+%serialization %
+Key/value stores have long used RDMA to
+%Many non-disaggregated key-value stores have used RDMA to
+accelerate
+performance~\cite{farm,memc3,erpc,herd,faast,mica,pilaf,cell,storm}.
+%%
+These systems strike a careful balance between directly accessing remote memory with one-sided RDMA requests and
+serializing mutating operations at a server-side CPU.
+%%
+Cuckoo~\cite{cuckoo} and hopscotch~\cite{hopscotch} hashing are popular choices in
+this space because clients can calculate the location of
+keys without needing to consult the server and potentially perform
+lock-less reads with RDMA~\cite{farm,pilaf,cuckoo}.
+
+
+
+\subsection{RDMA}
+
+RDMA
+%is an enabling technology for memory disaggregation. It allows
+allows
+clients to directly access the memory of a remote server with
+one-sided operations like read, write and atomic update without the
+involvement of a remote CPU~\cite{infiniband-spec}.  To set the
+context for RCuckoo's design, we benchmark the baseline performance of
+our testbed hardware, illustrating the constraints and
+opportunities.
+
+%%
+Atomic operations such as compare-and-swap (CAS) are essential for
+implementing locks or opportunistic concurrency. Atomics are limited
+to 64-bit operations and bottleneck at lower rates than reads and
+writes because they block requests on data-dependent addresses while
+waiting on PCIe round trips~\cite{design-guidelines,sherman}.
+Figure~\ref{fig:rdma_concur} shows that the NICs in our testbed
+(100-Gbps NVIDIA Mellanox ConnectX-5s) are capable of serving many 10s of
+millions of RDMA operations per second (limited only by link speed),
+but CAS operations to remote server memory top out around 50 MOPS.  Hence, we employ atomic operations judiciously in RCuckoo.
+
+%the scalability of
+%these operations on CX5 NICs for 64 bit operations.
+%%
+
+While atomic operations are limited to 64 bits, read and write message
+sizes are bounded only by the link MTU.
+%can 
+%RDMA NIC bandwidth has increased disproportionately to
+%latency in the last decade leading to interesting design
+%tradeoffs. CX7 NICs have 10$\times$ the bandwidth of CX3's
+%but their intra-rack RTT has only shrunk by 1.5$\times$.
+Figure~\ref{fig:rdma-benchmarks-b} shows that on our testbed
+NIC-to-NIC round-trip times are similar for all message sizes
+less than about 128 bytes, and
+%on CX5s for variable sized writes. All writes up
+%to 128 bytes have comparable latencies and
+messages must exceed 1~KB before the latency of a single large
+operation exceeds two RTTs of smaller ones.  We leverage this
+observation in RCuckoo by collapsing multiple small reads into a
+single larger one when appropriate.  The optimal threshold trades off
+latency reduction against read amplificaiton.
+
+%\textbf{If there
+%is surplus bandwidth a single large message can have much
+%lower latency than two dependent smaller messages.}
+
+Finally, we highlight that our testbed NICs, like those from several
+vendors, include a small amount (256~KB in our case) of on-NIC memory
+that can be addressed by remote clients using RDMA
+operations~\cite{device-memory}.  Accesses to NIC memory avoid the
+need to cross the server's PCIe bus, decreasing latency and increasing
+throughput.  The performance gain is particularly significant for
+atomic operations.  Figure~\ref{fig:rdma-benchmarks-c} shows the
+maximum aggregate throughput of concurrent CAS operations targeting
+the same single (i.e., contended) address or distinct, independent
+addresses in both main server memory (shown in orange) and on-NIC
+device memory (blue).  CAS operations perform between 1.8--3.1$\times$
+faster on NIC memory.  RCuckoo's datastructures are designed so that
+all CAS operations are performed on NIC memory.
+
+%many modern NICs
+%Vendors have provided some workarounds for atomic
+%bottlenecks by adding device memory and masked atomic
+%operations. CX series NICs have a 256KB region of on-NIC
+%RDMAable memory. Atomics to this region avoid the round trip
+%and execute with lower latency and up to 3x higher
+%throughput().
+%Masked CAS (MCAS) allows for each bit to be set
+%independently thus enabling higher density locks while
+%reducing contention~\cite{rdma-masked-cas}. While multi-CAS
+%is not supported these features have been demonstrated to
+%enable fast dense lock tables~\cite{sherman}.
+
+\subsection{Concurrent hash tables} 
+\label{sec:cuckoo-back}
+
+Fully disaggregated key/value stores are essentially concurrent hash
+tables whose conflict resolution strategy is implemented entirely by
+individual clients~\cite{rolex,fusee,race}.  Like any hash table, the
+underlying hashing algorithm must have an approach to managing
+collisions. Cuckoo and hopscotch hashing are particularly attractive
+in this context, because they both provide the property that the
+potential locations of an entry in the table, regardless of
+contention or collision, can be deterministically computed by clients
+based only upon the key itself.  Moreover, the set of locations is
+limited.  Hence, at least in theory, systems built around either
+cuckoo or hopscotch hashing hold the potential for single-round-trip
+reads.
+
+%\todo{Make sure to describe how a cuckoo path works}
+
+\textbf{Cuckoo hashing} uses independent hash functions to compute two
+potential table locations for a key, a primary and a secondary, where
+each location corresponds to an associative row of entries.  A key is
+always inserted into its primary location.  If that row is full, an
+existing key is evicted (or ``cuckooed'') to its secondary row to make
+space. If the cuckooed entry's secondary row is also full, the process
+iterates (by selecting yet another entry in the secondary row to
+cuckoo) until an open location is found. The path of evictions is
+known as a~\textit{cuckoo path}.  While insertions can be involved,
+reads can always be executed in a single round trip by reading the
+rows corresponding to both of a key's locations
+simultaneously~\cite{pilaf}.
+
+\textbf{Hopscotch hashing} works in a similar fashion but provides a
+slightly different guarantee, namely that keys will be located within
+a bounded neighborhood.  (While cuckoo hashing limits the number of
+locations in which a key may be stored, it does not provide any
+locality guarantees regarding those locations.) It does so by finding
+the physically closest empty entry to the desired location and then,
+if that location is not within the neighborhood, iteratively
+moving other entries out of the way to make room for the new key.
+The hopscotch process is facilitated by maintaining a per-entry
+bitmask of nearby collisions.  As with cuckoo hashing, clients can read in a single round trip time by reading a key's entire
+neighborhood at once.
+
+The insert operation is expensive for both approaches, and prior
+systems have taken steps to mitigate its cost.  In associative hashes
+like cuckoo hash tables, multiple entries can be chosen as eviction
+candidates and breadth-first-search (BFS) has been shown to minimize
+both cuckoo-path length and critical section
+time~\cite{memc3,cuckoo-improvements}.
+%While insertions require large
+%critical sections to perform search and execute updates along the
+%cuckoo path
+Farm~\cite{farm} and Reno~\cite{reno}, two systems based on hopscotch
+hashing, completely avoid executing long hopscotch chains due to their
+execution time and complexity.  Moreover, under either approach, the
+insert operation can fail despite vacant entries in the table---they
+are just too far away to be reached by either the cuckoo path or
+hopscotch's neighborhood-bounded linear probing.  The point at which
+inserts being to fail, known as the \emph{maximum fill factor}, is a
+function of the number of hash locations and row associativity in
+cuckoo hashing and desired neighborhood size for hopscotch hashing.
+
+RCuckoo uses cuckoo rather than hopscotch hashing due to locking
+concerns.
+%While both alog
+%also limits a key's location to a bounded set of 
+%bounded range of addresses and we considered using it as our core data
+%structure. We believe that although hopscotch hashing can likely be
+%disaggregated efficiently it is less straightforward than cuckoo
+%hashing for the following reasons:
+%%
+First, each step of a cuckoo insert process requires one update---to
+the entry being moved to its secondary location---rather than two.
+When an entry is relocated in a hopscotch table, the collision bitmask
+must also be updated.  (Reno~\cite{reno} uses one-sided atomics to
+sloppily update the bitmask but requires a server-side CPU to fix the
+bitmasks whenever concurrent inserts execute.)  Second, keys exist in
+one of two locations in cuckoo hashing so updates and deletes require
+locking only two rows, while hopscotch entries inhabit a range of
+locations, so a conservative locking strategy must lock the entire
+range.  Yet, RCuckoo takes inspiration from hopscotch neighborhoods and employs dependent hashing to increase the spatial
+locality of key locations, enabling clients to use local
+caches to speculatively compute cuckoo paths.
+
+%Because each lock
+%acquisition is expensive this increases the fundamental difficulty of
+%disaggregation a hopscotch hash.
+
+
+
+%%
+
+%Cuckoo hashes use
+%associative rows to improve their maximum fill factors.
+
+%%now I want to explain why cuckoo hashing and disaggregation don't work well together.
+
+%% Lockless $O(1)$ reads make Cuckoo hashing a desireable
+%% candidate for a disaggregated index. However, long
+%% unpredictable cuckoo paths and RDMA CAS limitations make
+%% performing insertions without locks difficult in the
+%% disaggregated setting. We designed an RDMA based cuckoo hash
+%% to illustrate the difficulties of performing opportunistic
+%% insertions. On inserts this system makes a sequence of reads
+%% to calculate a valid cuckoo path and then itteratitivly
+%% issues CAS operations to swap value along the path. If any
+%% value on the path is concurrently modified by another client
+%% the insertions will fail and must restart.
+%% Figure~\ref{fig:cuckoo-problems}(a) shows how the failure
+%% rate of insertions filling a table from 80-90\% full.
+
+
+%% \subsection{Full disaggregation}
+
+%% %%
+%% Disaggregated key-value in contrast assume that a memory
+%% server cannot provide serialization and orchestrate their
+%% writes solely using
+%% clients~\cite{rolex,fusee,clover,sherman,ford,race}. With
+%% the exception of Sherman~\cite{sherman} these systems use
+%% systems commit writes optimistically using 64 bit RDMA CAS. 
+%% %%
+%% Opportunistic writes have the advantage that updates are
+%% atomically visible, no critical sections exist, and client
+%% failures do not leave the table in an inconsistent state.
+%% Unfortunately CAS based opportunistic writes perform poorly
+%% under contention leading to high tail latencies
+%% ~\cite{clover}. Additionally RDMA CAS does not scale
+%% well~\cite{design-guidelines}(Figure~\ref{fig:rdma-benchmarks}(b)),
+%% and their small word width and lack of multi-CAS support
+%% constrain the size and types of updates they can perform.
+
+%% CAS width in particular effects system design because
+%% key-value pairs can rarely fit into 64 bits, indexes updated
+%% with CAS must reference keys values indirectly with a
+%% pointer. At minimum resolving a remote pointer requires an
+%% additional round trip for every read~\cite{race,clover}.
+%% %%
+%% As we will show in the following section data structures
+%% like cuckoo and hopscotch hashes are difficult implement with
+%% optimistic CAS updates because they require multiple updates
+%% to execute atomically.
+
+
+
+
 
 
 
@@ -746,7 +1238,7 @@ stores, could be improved and made highly efficient by applying these techniques
 
 
 \input{rcuckoo/intro}
-\input{rcuckoo/background}
+% \input{rcuckoo/background}
 \input{rcuckoo/body}
 %\input{problems}
 \input{rcuckoo/design}
